k3s/generated_manifests/otbr/Namespace-otbr.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    argocd.argoproj.io/sync-options: Prune=false
  name: otbr
