k3s/generated_manifests/otbr/Service-otbr.yaml
apiVersion: v1
kind: Service
metadata:
  name: otbr
  namespace: otbr
spec:
  ports:
    - name: rest
      port: 8081
      targetPort: 8081
  selector:
    app: otbr
  type: ClusterIP
