k3s/generated_manifests/otbr/NetworkPolicy-otbr.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: otbr
  namespace: otbr
spec:
  egress:
    - ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
      to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: home-assistant
      ports:
        - port: 8081
          protocol: TCP
  podSelector:
    matchLabels:
      app: otbr
  policyTypes:
    - Ingress
    - Egress
